fix link contrast

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -14,6 +14,8 @@ $body-color: #090c08;
 $body-bg: #eef0f2;
 $border-radius: 0.4rem;
 $primary: #ffbd13;
+$link-color: shade-color($primary, 60%);
+$link-color-hover: shade-color($primary, 70%);
 $secondary: #27187e;
 $info: #6a8d92;
 $font-size-base: 1.25rem;
